# CENTINEL

./: .gitignore  AUDIT_AI_DEFENSE.md  AUDIT_HONEYPOT.md  CHANGELOG.md  COMANDOS_CENTINELA.txt  LICENSE  README.md  SECURITY_AUDIT.md  centinela.db-shm  centinela.db-wal  pyproject.toml
.github/workflows/: ci.yml
centinel/: __init__.py  advisor.py  alerter.py  app.py  baseline_store.py  core.py  digest.py  doctor.py  feedback.py  keyring.py  maintenance.py  security.py  service.py  watchdog.py
centinel/collectors/: _proc_net.py  authlog.py  base.py  beacon.py  dnswatch.py  ebpf_exec.py  edgewatch.py  execwatch.py  hijackwatch.py  honeypot.py  journald.py  netwatch.py  persistence.py  simulator.py  sniffer.py  yarawatch.py
centinel/correlation/: ai_defense.py  beacon.py  cluster.py  engine.py  signatures.py
centinel/enrichment/: resolver.py
centinel/intel/: blocklist.py  kev.py
centinel/ml/: __init__.py  scoring.py
centinel/presentation/: assess.py  terminal.py  web.py
centinel/response/: firewall.py
centinel/rules/: default.yar
centinel/storage/: db.py  report.py
centinela/: advisor.py  app.py  baseline_store.py  core.py  doctor.py  feedback.py  maintenance.py  security.py
centinela/collectors/: authlog.py  honeypot.py  journald.py  persistence.py  simulator.py
centinela/correlation/: engine.py
centinela/enrichment/: geo.py  resolver.py
centinela/intel/: kev.py
centinela/presentation/: assess.py  terminal.py  web.py
centinela/response/: firewall.py  responder.py
centinela/storage/: db.py
docs/: ANALISIS_AV_FODA.md  AUDIT.md  DEFENSA_IA.md  ROADMAP.md
scripts/: centinel-wsl.bat
tests/: test_advisor.py  test_ai_defense.py  test_beacon.py  test_blocklist.py  test_chain.py  test_cluster.py  test_digest.py  test_dnswatch.py  test_doctor.py  test_ebpf_exec.py  test_edgewatch.py  test_execwatch.py  test_feedback.py  test_hardening.py  test_hijackwatch.py  test_honeypot.py  test_kev.py  test_ml_scoring.py  test_netwatch.py  test_persistence.py  test_report.py  test_security.py  test_service.py  test_signatures.py  test_watchdog.py  test_yarawatch.py
